fix: same style issue 320px. Results too high on phone screen however appears fine in dev tools

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,7 @@
   .results {
 
       display: inline-flex;
-      top: 70px;
+      top: 150px;
       right: 15px;
       justify-content: space-around;
       position: relative;
